fix spacing for responsiveness

--- a/hypnoinsight/src/components/MilestoneNuggets/MilestoneNuggets.scss
+++ b/hypnoinsight/src/components/MilestoneNuggets/MilestoneNuggets.scss
@@ -49,6 +49,12 @@
             @include tablet-celebrate-bubble;
         }
     }
+
+    @include desktop {
+        &__facts {
+            @include desktop-celebrate-bubble;
+        }
+    }
 }
 
 .email {
