--- a/hypnoinsight/src/styles/partials/_globals.scss
+++ b/hypnoinsight/src/styles/partials/_globals.scss
@@ -73,4 +73,4 @@ $mobile-celebrate-margin-top: 1rem;
 $tablet-celebrate-bubble-margin-top: 2rem;
 $tablet-celebrate-title: 28px;
 $tablet-celebrate-text: 16px;
-$tablet-celebrate-padding-top: 0.5rem;
+$tablet-celebrate-padding-top: 1rem;
